//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  picture String
  password String
  username String
  hideFound Boolean [not null, default: false]
  noteMarkers NoteMarker [not null]
  foundMarkers Location [not null]
  favoriteMaps Game [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NoteMarker {
  id Int [pk, increment]
  title String [not null]
  description String
  latitude Decimal [not null]
  longitude Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userEmail String [not null]
  user User [not null]
  mapSlug String [not null]
  map Map [not null]
}

Table Game {
  id Int [pk, increment]
  slug String [unique, not null]
  title String [not null]
  groups Group [not null]
  maps Map [not null]
  checklistGuide ChecklistGuide [not null]
  users User [not null]
  releaseDate DateTime [default: `now()`, not null]
}

Table Map {
  id Int [pk, increment]
  slug String [unique, not null]
  title String [not null]
  gameSlug String [not null]
  order Int [not null, default: 1]
  locations Location [not null]
  game Game [not null]
  regions Region [not null]
  NoteMarker NoteMarker [not null]
  minZoom Int [not null, default: 9]
  maxZoom Int [not null, default: 14]
  zoom Int [not null, default: 10]
  center Decimal[] [not null]
}

Table Region {
  id Int [pk, increment]
  title String [not null]
  mapSlug String [not null]
  map Map [not null]
  centerX Decimal
  centerY Decimal
}

Table Group {
  id Int [pk, increment]
  title String [not null]
  categories Category [not null]
  gameSlug String [not null]
  game Game [not null]
  expandable Boolean [not null, default: false]
}

Table Category {
  id Int [pk, increment]
  title String [not null]
  icon String [not null]
  info String
  groupId Int
  group Group
  locations Location [not null]
  defaultHidden Boolean [not null, default: false]
  checklistGuides ChecklistGuide [not null]
}

Table Location {
  id Int [pk, increment]
  title String [not null]
  description String
  latitude Decimal [not null]
  longitude Decimal [not null]
  categoryId Int
  category Category
  map Map [not null]
  mapSlug String [not null]
  media Media [not null]
  type LocationType [not null, default: 'MARKER']
  users User [not null]
}

Table Media {
  id Int [pk, increment]
  url String [not null]
  type String [not null]
  locationId Int
  location Location
}

Table ChecklistGuide {
  id Int [pk, increment]
  title String [not null]
  categories Category [not null]
  gameSlug String [not null]
  game Game [not null]
}

Table LocationToUser {
  foundmarkersId Int [ref: > Location.id]
  usersId String [ref: > User.id]
}

Table GameToUser {
  favoritemapsId Int [ref: > Game.id]
  usersId String [ref: > User.id]
}

Table CategoryToChecklistGuide {
  checklistguidesId Int [ref: > ChecklistGuide.id]
  categoriesId Int [ref: > Category.id]
}

Enum LocationType {
  MARKER
  TEXT
}

Ref: NoteMarker.userEmail > User.email

Ref: NoteMarker.mapSlug > Map.slug

Ref: Map.gameSlug > Game.slug

Ref: Region.mapSlug > Map.slug

Ref: Group.gameSlug > Game.slug

Ref: Category.groupId > Group.id

Ref: Location.categoryId > Category.id

Ref: Location.mapSlug > Map.slug

Ref: Media.locationId > Location.id

Ref: ChecklistGuide.gameSlug > Game.slug